--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+  "engines": {
+  "node": "20.x"
+}
+,
   "keywords": [
     "express",
     "nodejs",
